--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:image" content="assets/icon-512x512.png" />
   <meta property="og:url" content="https://hax.psu.edu/" />
+  <link rel="next" href="/login.php" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="robots" content="index, follow" />
@@ -177,7 +178,7 @@
       </h1>
       <p class="entice-wrapper"><span class="psu-entice">Part of <strong>Penn State</strong>?</span></p>
       <a tabindex="-1" href="https://iam.hax.psu.edu/login.php">
-        <button class="btn">Log in &gt;</button>
+        <button class="btn">Start building &gt;</button>
       </a>
     </div>
   </hax-psu>
