more clean up from prod testing on phone

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       </h1>
       <p class="entice-wrapper"><span class="psu-entice">Part of <strong>Penn State</strong>?</span></p>
       <div class="btn-wrapper">
-        <a tabindex="-1" href="https://iam.hax.psu.edu/login.php">
+        <a tabindex="-1" href="/login.php">
           <button class="btn">Start &gt;</button>
         </a>
         <a tabindex="-1" href="https://oer.hax.psu.edu/bto108/sites/haxcellence/welcome">
