--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-R2BH0HST7B"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-R2BH0HST7B');
-  </script>
   <meta charset="utf-8" />
   <link rel="preconnect" crossorigin href="https://fonts.googleapis.com" />
   <base href="/" />
@@ -202,5 +193,14 @@
     </div>
   </hax-psu>
   <script type="module" src="./src/hax-psu.js"></script>
+  <!-- Google tag (gtag.js) -->
+  <script defer async src="https://www.googletagmanager.com/gtag/js?id=G-R2BH0HST7B"></script>
+  <script defer async>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-R2BH0HST7B');
+  </script>
 </body>
 </html>
